# CMath

./: CMakeLists.txt  Makefile  README.md  calc_unbounded_int.c  calc_unbounded_int.h  library.h  unbounded_int.c  unbounded_int.h
app/: main.c
cli/: CMakeLists.txt  main.c
docs/: CMakeLists.txt  mainpage.md
include/: arithmetic.h  big_int.h  calc_unbounded_int.h  digits.h  interpreter.h  strings.h  unbounded_int.h  utils.h
src/: CMakeLists.txt  arithmetic.c  big_int.c  calc_unbounded_int.c  calc_unbounded_int.h  digits.c  interpreter.c  strings.c  unbounded_int.c  utils.c
test/: CMakeLists.txt  test_big_int.c  test_big_int.h  test_unbounded_int.c  test_unbounded_int.h  tests.c
